// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectSortBy should render 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by separated nav"
  role={null}
>
  <li
    className="theme-sort-by-items dropdown"
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Change sort criteria. Current sort by Id."
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Id
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Id as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Name as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
  <div
    className="theme-tc-display-mode-toggle tc-display-mode-toggle"
  >
    <button
      aria-label="Descending"
      aria-pressed={false}
      className="tc-icon-toggle theme-tc-icon-toggle btn"
      disabled={false}
      id="undefined-icon-descending"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-sort-desc"
        title={null}
      >
        <use
          xlinkHref="#talend-sort-desc"
        />
      </svg>
    </button>
    <button
      aria-label="Ascending"
      aria-pressed={true}
      className="tc-icon-toggle theme-tc-icon-toggle theme-active active btn"
      disabled={true}
      id="undefined-icon-ascending"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-sort-asc"
        title={null}
      >
        <use
          xlinkHref="#talend-sort-asc"
        />
      </svg>
    </button>
  </div>
</ul>
`;

exports[`SelectSortBy should render id if provided 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by separated nav"
  role={null}
>
  <li
    className="theme-sort-by-items dropdown"
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Change sort criteria. Current sort by Id."
      className="dropdown-toggle"
      href="#"
      id="toolbar-sort-by"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      Id
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby="toolbar-sort-by"
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Id as current sort criteria."
          href="#"
          id="toolbar-sort-by-item-id"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Name as current sort criteria."
          href="#"
          id="toolbar-sort-by-item-name"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
  <div
    className="theme-tc-display-mode-toggle tc-display-mode-toggle"
  >
    <button
      aria-label="Descending"
      aria-pressed={false}
      className="tc-icon-toggle theme-tc-icon-toggle btn"
      disabled={false}
      id="toolbar-sort-order-icon-descending"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-sort-desc"
        title={null}
      >
        <use
          xlinkHref="#talend-sort-desc"
        />
      </svg>
    </button>
    <button
      aria-label="Ascending"
      aria-pressed={true}
      className="tc-icon-toggle theme-tc-icon-toggle theme-active active btn"
      disabled={true}
      id="toolbar-sort-order-icon-ascending"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-sort-asc"
        title={null}
      >
        <use
          xlinkHref="#talend-sort-asc"
        />
      </svg>
    </button>
  </div>
</ul>
`;

exports[`SelectSortBy should render with no dropdown 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by separated nav"
  role={null}
>
  <li
    className="navbar-text"
    onSelect={null}
  >
    Id
  </li>
  <div
    className="theme-tc-display-mode-toggle tc-display-mode-toggle"
  >
    <button
      aria-label="Descending"
      aria-pressed={false}
      className="tc-icon-toggle theme-tc-icon-toggle btn"
      disabled={false}
      id="undefined-icon-descending"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-sort-desc"
        title={null}
      >
        <use
          xlinkHref="#talend-sort-desc"
        />
      </svg>
    </button>
    <button
      aria-label="Ascending"
      aria-pressed={true}
      className="tc-icon-toggle theme-tc-icon-toggle theme-active active btn"
      disabled={true}
      id="undefined-icon-ascending"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseOver={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="theme-tc-svg-icon tc-svg-icon"
        focusable="false"
        name="talend-sort-asc"
        title={null}
      >
        <use
          xlinkHref="#talend-sort-asc"
        />
      </svg>
    </button>
  </div>
</ul>
`;

exports[`SelectSortBy should render without field selected 1`] = `
<ul
  className="theme-tc-list-toolbar-sort-by separated nav"
  role={null}
>
  <li
    className="theme-sort-by-items dropdown"
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Change sort criteria. Current sort by N.C."
      className="dropdown-toggle"
      href="#"
      id={42}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      N.C
       
      <span
        className="caret"
      />
    </a>
    <ul
      aria-labelledby={42}
      className="dropdown-menu"
      role="menu"
    >
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Id as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Id
        </a>
      </li>
      <li
        className=""
        role="presentation"
      >
        <a
          aria-label="Select Name as current sort criteria."
          href="#"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex="-1"
        >
          Name
        </a>
      </li>
    </ul>
  </li>
</ul>
`;
